# gallerious

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  nginx.conf
gal/: Cargo.toml
gal/src/: main.rs
galleri/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
galleri/src/: App.vue  environment.d.ts
galleri/src/assets/: main.css
galleri/src/router/: index.ts
